# geotiff-to-tak-terrain

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  How_to_serve_tiles.md  README.md  example_stats.md  feature_request_discussion.md  psychedelic.md  pyproject.toml
.github/workflows/: docker-build.yml
src/geotiff_to_tak_terrain/: __init__.py  encoder.py  main.py  metadata.py  tyler.py
